--- a/index.html
+++ b/index.html
@@ -2,15 +2,30 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/logo-light.svg"
+			media="(prefers-color-scheme: light)"
+		/>
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/logo-dark.svg"
+			media="(prefers-color-scheme: dark)"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=0.9" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>Laurence</title>
+		<link
+			href="https://api.fontshare.com/v2/css?f[]=khand@400&f[]=array@401,400,600,601,700,701&display=swap"
+			rel="stylesheet"
+		/>
+		<title>Portfolio</title>
 	</head>
 	<body>
 		<div id="root"></div>
